syntax = "proto3";
package model;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_getters_all) = false;

// KV message to be sent/received
service KV {
    // CreateProject creates a new user project
    rpc CreateProject (Project) returns (Empty) {}

    // DeleteProject deletes a previously stored user project
    rpc DeleteProject (ID) returns (Empty) {}

    // GetProject returns a user project
    rpc GetProject (ID) returns (Project) {}
}

message Empty {}

// Project holds the data of a stored project
message Project {
    int32 id = 1;
    string name = 2;
}

// ID is passed to sort through existing projects
message ID {
    int32 id = 1;
}